--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,33 @@ ul {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   line-height: 50px;
 }
+.counter-cont {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: azure;
+  background: rgba(54, 53, 53, 0.432);
+  font-size: 100px;
+  font-weight: bold;
+  visibility: hidden;
+  z-index: 9999999999999999999;
+}
+@keyframes counter {
+  from {
+  }
+  to {
+    transform: scale(2.5);
+  }
+}
+.animate {
+  animation-name: counter;
+  animation-duration: 2s;
+  animation-iteration-count: 20;
+}
 @media (max-width: 480px) {
   .container {
     margin: 14px auto 90px;
