--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,39 @@ ul {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   line-height: 50px;
 }
+.endScreen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(25, 43, 48);
+  text-align: center;
+  color: aliceblue;
+  border: 4px solid aliceblue;
+  border-left: none;
+  border-right: none;
+  z-index: 999999;
+  font-size: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+}
+.restart {
+  border: 2px solid azure;
+  display: block;
+  border-radius: 40px;
+  width: 500px;
+  margin-top: 30px;
+  margin-left: 5px;
+}
+.restart:hover {
+  background: antiquewhite;
+  color: rgb(25, 43, 48);
+  cursor: pointer;
+  transform: scale(1.1);
+}
 .counter-cont {
   position: absolute;
   top: 0;
@@ -111,5 +144,11 @@ ul {
   }
   .siide {
     order: 2;
+  }
+  .endScreen {
+    font-size: 40px;
+  }
+  .restart {
+    width: 300px;
   }
 }
