--- a/loginStyle.css
+++ b/loginStyle.css
@@ -6,7 +6,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(38, 175, 90);
+  bbackground: #bc4e9c; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #f80759,
+    #bc4e9c
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #f80759,
+    #bc4e9c
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   z-index: 9999999;
   transition: 1.2s all ease-in-out;
 }
@@ -53,9 +64,16 @@
   height: 100px;
   border-radius: 50%;
   z-index: 9;
-  background: #4aba70;
+  background: url("logo.png");
+  background-repeat: repeat;
+  background-size: auto;
+  background-repeat: no-repeat;
   padding: 15px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  background-attachment: fixed;
+  background-size: contain;
+  border: 3px solid #f01062;
+  transform: scale(1.2);
 }
 .login-form .avatar i {
   font-size: 62px;
