--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,13 @@ body {
   padding-top: 50px;
 }
 .maiin {
-  background-color: rgb(159, 186, 187);
+  background: #bc4e9c;
+  background: -webkit-linear-gradient(to right, #f80759, #bc4e9c);
+  background: linear-gradient(to right, #f80759, #bc4e9c);
 }
 .game {
   border: 3px solid azure;
-  box-shadow: -1px 1px 34px 3px azure;
+  box-shadow: -1px 1px 20px 1px rgba(240, 255, 255, 0.5);
 }
 .card {
   margin: 5px;
@@ -30,6 +32,9 @@ body {
   position: absolute;
   transform: scale(5) translateY(30px);
   z-index: 99;
+}
+.logo-cont {
+  margin: 17px 0 30px;
 }
 .card-img {
   position: absolute;
@@ -134,6 +139,12 @@ ul {
 @media (max-width: 480px) {
   .container {
     margin: 14px auto 90px;
+  }
+  .logo-cont {
+    margin-bottom: -20px 0;
+  }
+  .logo-cont img {
+    transform: scale(0.8);
   }
   .maiin {
     order: 1;
