--- a/loginStyle.css
+++ b/loginStyle.css
@@ -64,18 +64,19 @@
   height: 100px;
   border-radius: 50%;
   z-index: 9;
-  background: url("logo.png");
+  background: url("logoz.png");
   background-repeat: repeat;
   background-size: auto;
   background-repeat: no-repeat;
   padding: 15px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
   background-attachment: fixed;
-  background-size: contain;
+  background-size: cover;
+  background-color: #f01062;
   border: 3px solid #f01062;
-  transform: scale(1.2);
+  transform: scale(1.5);
 }
-.login-form .avatar i {
+.avatar .login-form .avatar i {
   font-size: 62px;
 }
 .login-form .form-group {
