--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ ul {
   justify-content: center;
   align-items: center;
   color: azure;
-  background: rgba(54, 53, 53, 0.432);
+  background: rgb(255, 23, 158);
   font-size: 100px;
   font-weight: bold;
   visibility: hidden;
