--- a/loginStyle.css
+++ b/loginStyle.css
@@ -115,7 +115,7 @@
   font-size: 13px;
 }
 .login-form a {
-  color: #4aba70;
+  color: antiquewhite;
 }
 #login {
   background-color: rgb(221, 22, 72);
