--- a/styles.css
+++ b/styles.css
@@ -7,25 +7,32 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+  background: linear-gradient(to right, #f80759, #bc4e9c);
 }
 .siide {
   background-color: rgb(15, 15, 15);
   color: azure;
   padding-top: 50px;
+  left: -50%;
+  transition: 1s all ease-in-out;
+  height: 100%;
+  z-index: 9;
 }
 .maiin {
   background: #bc4e9c;
   background: -webkit-linear-gradient(to right, #f80759, #bc4e9c);
   background: linear-gradient(to right, #f80759, #bc4e9c);
+  height: 100%;
+  left: -4%;
 }
 .game {
   border: 3px solid azure;
   box-shadow: -1px 1px 20px 1px rgba(0, 0, 0, 0.5);
+  height: 100%;
 }
 .card {
-  margin: 15px;
-  width: 150px;
-  height: 150px;
+  margin: 5px;
+  height: 100px;
   position: relative;
   border-radius: 50%;
   box-shadow: -1px 1px 20px 1px rgba(0, 0, 0, 0.404);
@@ -43,7 +50,8 @@ body {
   border-radius: 0;
 }
 .logo-cont {
-  margin-bottom: -20px;
+  margin-bottom: -65px;
+  margin-top: -71px;
 }
 .logo-cont img {
   width: 248px;
@@ -57,7 +65,7 @@ body {
   height: 100%;
 }
 .front {
-  z-index: 2;
+  z-index: 3;
 }
 .back {
   z-index: 1;
@@ -72,22 +80,22 @@ body {
   margin: 10px auto;
   padding: 10px 10px;
   border-radius: 12px;
-  font-size: 22px;
+  font-size: 13px;
   font-weight: bold;
   font-family: "Courier New", Courier, monospace;
-  letter-spacing: 2px;
 }
 .option:hover {
   border: 2px solid rgba(51, 51, 100, 0.822);
 }
 ul {
   text-align: start;
-  text-decoration: underline;
   list-style-type: square;
   font-weight: 300;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  line-height: 50px;
+  line-height: 20px;
+  padding: 10px;
+  padding-left: 15px;
 }
 .option a {
   cursor: pointer;
@@ -98,10 +106,10 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(25, 43, 48);
+  background: whitesmoke;
   text-align: center;
-  color: aliceblue;
-  border: 4px solid aliceblue;
+  color: #f80759;
+  border: 4px solid rgb(30, 30, 31);
   border-left: none;
   border-right: none;
   z-index: 999999;
@@ -112,7 +120,7 @@ ul {
   visibility: hidden;
 }
 .restart {
-  border: 2px solid azure;
+  border: 2px solid rgb(35, 36, 36);
   display: block;
   border-radius: 40px;
   width: 500px;
@@ -120,7 +128,7 @@ ul {
   margin-left: 5px;
 }
 .restart:hover {
-  background: antiquewhite;
+  background: rgb(207, 207, 207);
   color: rgb(25, 43, 48);
   cursor: pointer;
   transform: scale(1.1);
@@ -140,6 +148,18 @@ ul {
   visibility: hidden;
   z-index: 9999999999999999999;
 }
+.views {
+  z-index: 2;
+  font-size: 4px !important;
+  background: white;
+  width: max-content;
+  padding: 0 6px;
+  border-radius: 20px;
+  margin: 0 auto;
+  visibility: hidden;
+  position: absolute;
+  right: 0;
+}
 @keyframes counter {
   from {
   }
@@ -152,7 +172,68 @@ ul {
   animation-duration: 2s;
   animation-iteration-count: 20;
 }
+.more {
+  font-weight: bolder;
+  font-size: x-large;
+  background: white;
+  color: #f20f60;
+  width: 75px;
+  margin: auto;
+  border-radius: 50%;
+  height: 75px;
+  cursor: pointer;
+  position: relative;
+  display: inline-flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.container {
+  margin-bottom: 10px !important;
+}
+.winners-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 108%;
+  background: rgba(0, 0, 0, 0.555);
+  overflow-y: hidden;
+  top: -110%;
+  transition: 0.9s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  z-index: 999999;
+}
+.winners-box {
+  width: 600px;
+  margin: auto;
+  border: 4px solid white;
+  color: rgb(22, 22, 22);
+  background: azure;
+  font-size: larger;
+  z-index: 9999999999999999;
+  position: relative;
+}
+.winners-box ul {
+  list-style-type: disc;
+}
+.close-winners {
+  position: absolute;
+  color: black;
+  margin: 30px;
+  border: 1.5px solid white;
+  padding: 10px;
+  background: white;
+  font-size: 24px;
+  right: 0;
+}
+.showSide {
+  left: 0;
+}
 @media (max-width: 480px) {
+  .views {
+    font-size: 2.5px !important;
+    padding: 0 2px;
+  }
   .container {
     margin: 14px auto 90px;
   }
@@ -173,6 +254,7 @@ ul {
   }
   .siide {
     order: 2;
+    left: 0;
   }
   .endScreen {
     font-size: 40px;
@@ -184,18 +266,7 @@ ul {
     transform: scale(5.8) translateY(20px) translateX(-0.5px);
     border: none;
   }
-  .more {
-    font-weight: bolder;
-    font-size: x-large;
-    background: white;
-    color: #f20f60;
-    width: min-content;
-    margin: auto;
-    padding: 10px 30px;
-    border-radius: 50%;
-    height: min-content;
-    transform: translateY(-69px);
-    -webkit-transform: translateY(-69px);
-    cursor: pointer;
+  .close-winners {
+    margin-top: 59%;
   }
 }
