--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,17 @@ body {
   border: 3px solid azure;
   box-shadow: -1px 1px 20px 1px rgba(0, 0, 0, 0.5);
   height: 100%;
+  width: 835px !important;
 }
 .card {
-  margin: 5px;
-  height: 100px;
+  margin: 11px 13px;
+  height: 91px;
   position: relative;
   border-radius: 50%;
   box-shadow: -1px 1px 20px 1px rgba(0, 0, 0, 0.404);
+}
+.col-2 {
+  max-width: 13.667% !important;
 }
 .card img {
   border-radius: 50%;
@@ -50,8 +54,8 @@ body {
   border-radius: 0;
 }
 .logo-cont {
-  margin-bottom: -65px;
-  margin-top: -71px;
+  margin-bottom: -46px;
+  margin-top: -46px;
 }
 .logo-cont img {
   width: 248px;
