--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ ul {
   align-items: center;
   visibility: hidden;
 }
-.restart {
+.continue {
   border: 2px solid rgb(35, 36, 36);
   display: block;
   border-radius: 40px;
@@ -131,7 +131,7 @@ ul {
   margin-top: 30px;
   margin-left: 5px;
 }
-.restart:hover {
+.continue:hover {
   background: rgb(207, 207, 207);
   color: rgb(25, 43, 48);
   cursor: pointer;
@@ -267,7 +267,7 @@ ul {
   .endScreen {
     font-size: 40px;
   }
-  .restart {
+  .continue {
     width: 300px;
   }
   .show {
