--- a/styles.css
+++ b/styles.css
@@ -110,13 +110,26 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background: whitesmoke;
+  background: #0f0c29; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #24243e,
+    #302b63,
+    #0f0c29
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #24243e,
+    #302b63,
+    #0f0c29
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   text-align: center;
-  color: #f80759;
+  color: gold;
   border: 4px solid rgb(30, 30, 31);
   border-left: none;
   border-right: none;
-  z-index: 999999;
+  z-index: 8;
   font-size: 70px;
   display: flex;
   justify-content: center;
@@ -124,7 +137,8 @@ ul {
   visibility: hidden;
 }
 .continue {
-  border: 2px solid rgb(35, 36, 36);
+  border: 2px solid goldenrod;
+  color: whitesmoke;
   display: block;
   border-radius: 40px;
   width: 500px;
