--- a/styles.css
+++ b/styles.css
@@ -136,14 +136,31 @@ ul {
   align-items: center;
   visibility: hidden;
 }
+@keyframes arrowAnimate {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(30px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+.arrow {
+  animation-name: arrowAnimate;
+  animation-duration: 0.8s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
 .continue {
   border: 2px solid goldenrod;
   color: whitesmoke;
   display: block;
   border-radius: 40px;
-  width: 500px;
   margin-top: 30px;
   margin-left: 5px;
+  padding: 0 5px 10px;
 }
 .continue:hover {
   background: rgb(207, 207, 207);
