--- a/styles.css
+++ b/styles.css
@@ -342,10 +342,15 @@ ul {
   cursor: pointer;
 }
 /*   */
-@media (max-width: 480px) {
+@media (max-height: 962) {
   .btns-container {
     margin-top: 36px;
     z-index: 12;
+  }
+}
+@media (max-width: 480px) {
+  .btns-container {
+    margin-top: 36px;
   }
   .views {
     font-size: 2.5px !important;
