--- a/styles.css
+++ b/styles.css
@@ -110,22 +110,12 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #0f0c29; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #24243e,
-    #302b63,
-    #0f0c29
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #24243e,
-    #302b63,
-    #0f0c29
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #f80759, #bc4e9c);
+  background: linear-gradient(to right, #f80759, #bc4e9c);
 
   text-align: center;
-  color: gold;
+  color: whitesmoke;
+  font-weight: 400;
   border: 4px solid rgb(30, 30, 31);
   border-left: none;
   border-right: none;
